--- a/SBSPMS/SBSPMS.csproj
+++ b/SBSPMS/SBSPMS.csproj
@@ -54,6 +54,7 @@
     <Content Include="Admin.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="New.aspx" />
+    <Content Include="Total.aspx" />
     <Content Include="User.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -86,6 +87,13 @@
       <DependentUpon>New.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Total.aspx.cs">
+      <DependentUpon>Total.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Total.aspx.designer.cs">
+      <DependentUpon>Total.aspx</DependentUpon>
+    </Compile>
     <Compile Include="User.aspx.cs">
       <DependentUpon>User.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
