--- a/SBSPMS/SBSPMS.csproj
+++ b/SBSPMS/SBSPMS.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Admin.aspx" />
+    <Content Include="BulletedList.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="New.aspx" />
     <Content Include="Total.aspx" />
@@ -71,6 +72,13 @@
     </Compile>
     <Compile Include="Admin.aspx.designer.cs">
       <DependentUpon>Admin.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="BulletedList.aspx.cs">
+      <DependentUpon>BulletedList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="BulletedList.aspx.designer.cs">
+      <DependentUpon>BulletedList.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
