--- a/SBSPMS/SBSPMS.csproj
+++ b/SBSPMS/SBSPMS.csproj
@@ -54,7 +54,10 @@
     <Content Include="Admin.aspx" />
     <Content Include="BulletedList.aspx" />
     <Content Include="Default.aspx" />
+    <Content Include="Image\sbs logo.PNG" />
+    <Content Include="Image\捕获.PNG" />
     <Content Include="New.aspx" />
+    <Content Include="PlaceHolder.aspx" />
     <Content Include="Total.aspx" />
     <Content Include="User.aspx" />
     <Content Include="Web.config" />
@@ -64,6 +67,7 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <Content Include="XMLFile1.xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Admin.aspx.cs">
@@ -94,6 +98,13 @@
     <Compile Include="New.aspx.designer.cs">
       <DependentUpon>New.aspx</DependentUpon>
     </Compile>
+    <Compile Include="PlaceHolder.aspx.cs">
+      <DependentUpon>PlaceHolder.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PlaceHolder.aspx.designer.cs">
+      <DependentUpon>PlaceHolder.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Total.aspx.cs">
       <DependentUpon>Total.aspx</DependentUpon>
@@ -110,6 +121,7 @@
       <DependentUpon>User.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
