--- a/SBSPMS/Web.config
+++ b/SBSPMS/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <!--
   有关如何配置 ASP.NET 应用程序的详细消息，请访问
@@ -6,6 +6,10 @@
   -->
 
 <configuration>
+    <connectionStrings>
+        <add name="SBSPMSConnectionString" connectionString="Data Source=192.168.50.4;Initial Catalog=SBSPMS;Persist Security Info=True;User ID=sa;Password=123456"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <system.web>
         <compilation debug="true" targetFramework="4.0" />
     </system.web>
