--- a/SBSPMS/SBSPMS.csproj
+++ b/SBSPMS/SBSPMS.csproj
@@ -63,6 +63,7 @@
     <Content Include="MyControl.ascx" />
     <Content Include="New.aspx" />
     <Content Include="PlaceHolder.aspx" />
+    <Content Include="ServerControl.aspx" />
     <Content Include="SqlDataTable.aspx" />
     <Content Include="Total.aspx" />
     <Content Include="User.aspx" />
@@ -149,6 +150,13 @@
       <DependentUpon>PlaceHolder.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerControl.aspx.cs">
+      <DependentUpon>ServerControl.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ServerControl.aspx.designer.cs">
+      <DependentUpon>ServerControl.aspx</DependentUpon>
+    </Compile>
     <Compile Include="SqlDataTable.aspx.cs">
       <DependentUpon>SqlDataTable.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
