--- a/SBSPMS/SBSPMS.csproj
+++ b/SBSPMS/SBSPMS.csproj
@@ -58,6 +58,8 @@
     <Content Include="DataBindTest.aspx" />
     <Content Include="DataReader.aspx" />
     <Content Include="Default.aspx" />
+    <Content Include="FileStreamTest.aspx" />
+    <Content Include="FileTest.aspx" />
     <Content Include="Image\sbs logo.PNG" />
     <Content Include="Image\捕获.PNG" />
     <Content Include="InsertCommand.aspx" />
@@ -121,6 +123,20 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="FileStreamTest.aspx.cs">
+      <DependentUpon>FileStreamTest.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FileStreamTest.aspx.designer.cs">
+      <DependentUpon>FileStreamTest.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="FileTest.aspx.cs">
+      <DependentUpon>FileTest.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FileTest.aspx.designer.cs">
+      <DependentUpon>FileTest.aspx</DependentUpon>
     </Compile>
     <Compile Include="InsertCommand.aspx.cs">
       <DependentUpon>InsertCommand.aspx</DependentUpon>
@@ -194,7 +210,10 @@
       <DependentUpon>WebUserControl1.ascx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Files\" />
+    <Folder Include="File\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
