--- a/SBSPMS/SBSPMS.csproj
+++ b/SBSPMS/SBSPMS.csproj
@@ -60,15 +60,19 @@
     <Content Include="Default.aspx" />
     <Content Include="FileStreamTest.aspx" />
     <Content Include="FileTest.aspx" />
+    <Content Include="Image\head.PNG" />
     <Content Include="Image\sbs logo.PNG" />
     <Content Include="Image\捕获.PNG" />
     <Content Include="InsertCommand.aspx" />
+    <Content Include="MasterPageTest.aspx" />
     <Content Include="MyControl.ascx" />
     <Content Include="New.aspx" />
     <Content Include="PlaceHolder.aspx" />
     <Content Include="ServerControl.aspx" />
     <Content Include="SqlDataTable.aspx" />
+    <Content Include="test.xml" />
     <Content Include="Total.aspx" />
+    <Content Include="trans.xslt" />
     <Content Include="User.aspx" />
     <Content Include="Validator.aspx" />
     <Content Include="Web.config" />
@@ -145,6 +149,20 @@
     <Compile Include="InsertCommand.aspx.designer.cs">
       <DependentUpon>InsertCommand.aspx</DependentUpon>
     </Compile>
+    <Compile Include="MasterPage.Master.cs">
+      <DependentUpon>MasterPage.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MasterPage.Master.designer.cs">
+      <DependentUpon>MasterPage.Master</DependentUpon>
+    </Compile>
+    <Compile Include="MasterPageTest.aspx.cs">
+      <DependentUpon>MasterPageTest.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MasterPageTest.aspx.designer.cs">
+      <DependentUpon>MasterPageTest.aspx</DependentUpon>
+    </Compile>
     <Compile Include="MyControl.ascx.cs">
       <DependentUpon>MyControl.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -213,6 +231,9 @@
   <ItemGroup>
     <Folder Include="Files\" />
     <Folder Include="File\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="MasterPage.Master" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
