--- a/SBSPMS/SBSPMS.csproj
+++ b/SBSPMS/SBSPMS.csproj
@@ -60,6 +60,8 @@
     <Content Include="Default.aspx" />
     <Content Include="FileStreamTest.aspx" />
     <Content Include="FileTest.aspx" />
+    <Content Include="History.aspx" />
+    <Content Include="HistorySelect.aspx" />
     <Content Include="Image\head.PNG" />
     <Content Include="Image\sbs logo.PNG" />
     <Content Include="Image\捕获.PNG" />
@@ -74,6 +76,7 @@
     <Content Include="Total.aspx" />
     <Content Include="trans.xslt" />
     <Content Include="User.aspx" />
+    <Content Include="UserInfo.aspx" />
     <Content Include="Validator.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -82,6 +85,7 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <Content Include="WebForm1.aspx" />
     <Content Include="WebUserControl1.ascx" />
     <Content Include="XMLFile1.xml" />
   </ItemGroup>
@@ -141,6 +145,20 @@
     </Compile>
     <Compile Include="FileTest.aspx.designer.cs">
       <DependentUpon>FileTest.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="History.aspx.cs">
+      <DependentUpon>History.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="History.aspx.designer.cs">
+      <DependentUpon>History.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="HistorySelect.aspx.cs">
+      <DependentUpon>HistorySelect.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="HistorySelect.aspx.designer.cs">
+      <DependentUpon>HistorySelect.aspx</DependentUpon>
     </Compile>
     <Compile Include="InsertCommand.aspx.cs">
       <DependentUpon>InsertCommand.aspx</DependentUpon>
@@ -213,12 +231,26 @@
     <Compile Include="User.aspx.designer.cs">
       <DependentUpon>User.aspx</DependentUpon>
     </Compile>
+    <Compile Include="UserInfo.aspx.cs">
+      <DependentUpon>UserInfo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UserInfo.aspx.designer.cs">
+      <DependentUpon>UserInfo.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Validator.aspx.cs">
       <DependentUpon>Validator.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Validator.aspx.designer.cs">
       <DependentUpon>Validator.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForm1.aspx.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForm1.aspx.designer.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
     </Compile>
     <Compile Include="WebUserControl1.ascx.cs">
       <DependentUpon>WebUserControl1.ascx</DependentUpon>
@@ -234,6 +266,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="MasterPage.Master" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Web.sitemap" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
