--- a/SBSPMS/SBSPMS.csproj
+++ b/SBSPMS/SBSPMS.csproj
@@ -66,12 +66,14 @@
     <Content Include="Image\sbs logo.PNG" />
     <Content Include="Image\捕获.PNG" />
     <Content Include="InsertCommand.aspx" />
+    <Content Include="Login.aspx" />
     <Content Include="MasterPageTest.aspx" />
     <Content Include="MyControl.ascx" />
     <Content Include="New.aspx" />
     <Content Include="PlaceHolder.aspx" />
     <Content Include="ServerControl.aspx" />
     <Content Include="SqlDataTable.aspx" />
+    <Content Include="StyleSheet.css" />
     <Content Include="test.xml" />
     <Content Include="Total.aspx" />
     <Content Include="trans.xslt" />
@@ -166,6 +168,13 @@
     </Compile>
     <Compile Include="InsertCommand.aspx.designer.cs">
       <DependentUpon>InsertCommand.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="MasterPage.Master.cs">
       <DependentUpon>MasterPage.Master</DependentUpon>
@@ -269,6 +278,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.sitemap" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="App_Themes\主题1\SkinFile.skin" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
